--- a/functions/package.json
+++ b/functions/package.json
@@ -1,21 +1,27 @@
 {
-  "name": "functions",
-  "description": "Cloud Functions for Firebase",
-  "scripts": {
-    "lint": "eslint .",
-    "serve": "firebase serve --only functions",
-    "shell": "firebase functions:shell",
-    "start": "npm run shell",
-    "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
-  },
-  "dependencies": {
-    "firebase-admin": "~5.12.0",
-    "firebase-functions": "^1.0.1"
-  },
-  "devDependencies": {
-    "eslint": "^4.12.0",
-    "eslint-plugin-promise": "^3.6.0"
-  },
-  "private": true
+	"name": "functions",
+	"description": "Cloud Functions for Firebase",
+	"scripts": {
+		"lint": "eslint .",
+		"serve": "firebase serve --only functions",
+		"shell": "firebase functions:shell",
+		"start": "npm run shell",
+		"deploy": "firebase deploy --only functions",
+		"logs": "firebase functions:log"
+	},
+	"dependencies": {
+		"firebase-admin": "~5.12.0",
+		"firebase-functions": "^1.0.1"
+	},
+	"devDependencies": {
+		"eslint": "^4.12.0",
+		"eslint-plugin-promise": "^3.6.0",
+		"chai": "^3.5.0",
+		"chai-as-promised": "^6.0.0",
+		"eslint": "^4.13.1",
+		"eslint-plugin-promise": "^3.6.0",
+		"mocha": "^3.2.0",
+		"sinon": "^1.17.7"
+	},
+	"private": true
 }
