--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"scripts": {
 		"serve": "vue-cli-service serve",
 		"build": "vue-cli-service build",
-		"lint": "vue-cli-service lint"
+		"lint": "vue-cli-service lint",
+		"test": "vue-cli-service lint"
 	},
 	"dependencies": {
 		"firebase": "^4.12.0",
@@ -30,22 +31,12 @@
 		"tailwindcss": "^0.5.1",
 		"vue-template-compiler": "^2.5.13"
 	},
-	"browserslist": [
-		"> 1%",
-		"last 2 versions",
-		"not ie <= 8"
-	],
+	"browserslist": ["> 1%", "last 2 versions", "not ie <= 8"],
 	"gitHooks": {
 		"pre-commit": "lint-staged"
 	},
 	"lint-staged": {
-		"*.js": [
-			"vue-cli-service lint",
-			"git add"
-		],
-		"*.vue": [
-			"vue-cli-service lint",
-			"git add"
-		]
+		"*.js": ["vue-cli-service lint", "git add"],
+		"*.vue": ["vue-cli-service lint", "git add"]
 	}
 }
