--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "the-watcher",
 	"version": "0.1.0",
+	"engines": { "node": ">=8.11" },
 	"private": true,
 	"scripts": {
 		"serve": "vue-cli-service serve",
