--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,20 +1,16 @@
 {
 	"name": "The Watcher",
 	"short_name": "Watcher",
+	"description": "A Kingdom Death Monster campaign tool.",
 	"icons": [
 		{
 			"src": "/img/icons/android-chrome-192x192.png",
 			"sizes": "192x192",
-			"type": "image/png"
-		},
-		{
-			"src": "/img/icons/android-chrome-512x512.png",
-			"sizes": "512x512",
 			"type": "image/png"
 		}
 	],
 	"start_url": "/index.html",
 	"display": "standalone",
 	"background_color": "#000000",
-	"theme_color": "#4DBA87"
+	"theme_color": "#000000"
 }
