--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
 	"name": "the-watcher",
 	"version": "0.1.0",
-	"engines": { "node": ">=8.11" },
+	"engines": {
+		"node": ">=8.10"
+	},
 	"private": true,
 	"scripts": {
 		"serve": "vue-cli-service serve",
@@ -32,12 +34,22 @@
 		"tailwindcss": "^0.5.1",
 		"vue-template-compiler": "^2.5.13"
 	},
-	"browserslist": ["> 1%", "last 2 versions", "not ie <= 8"],
+	"browserslist": [
+		"> 1%",
+		"last 2 versions",
+		"not ie <= 8"
+	],
 	"gitHooks": {
 		"pre-commit": "lint-staged"
 	},
 	"lint-staged": {
-		"*.js": ["vue-cli-service lint", "git add"],
-		"*.vue": ["vue-cli-service lint", "git add"]
+		"*.js": [
+			"vue-cli-service lint",
+			"git add"
+		],
+		"*.vue": [
+			"vue-cli-service lint",
+			"git add"
+		]
 	}
 }
