--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,7 @@
 {
-  "root": true,
-  "extends": [
-    "plugin:vue/essential",
-    "@vue/prettier"
-  ]
+	"root": true,
+	"extends": ["plugin:vue/essential", "@vue/prettier"],
+	"rules": {
+		"no-console": 1
+	}
 }
