--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"serve": "vue-cli-service serve",
 		"build": "vue-cli-service build",
 		"lint": "vue-cli-service lint",
-		"test": "vue-cli-service lint"
+		"test": "vue-cli-service lint",
+		"functions": "firebase deploy --only functions"
 	},
 	"dependencies": {
 		"firebase": "^4.12.0",
@@ -26,6 +27,8 @@
 		"@vue/cli-service": "^3.0.0-beta.6",
 		"@vue/eslint-config-prettier": "^3.0.0-beta.6",
 		"babel-core": "^7.0.0-0",
+		"firebase-admin": "^5.12.0",
+		"firebase-functions": "^1.0.1",
 		"glob-all": "^3.1.0",
 		"lint-staged": "^6.0.0",
 		"node-sass": "^4.7.2",
@@ -34,22 +37,12 @@
 		"tailwindcss": "^0.5.1",
 		"vue-template-compiler": "^2.5.13"
 	},
-	"browserslist": [
-		"> 1%",
-		"last 2 versions",
-		"not ie <= 8"
-	],
+	"browserslist": ["> 1%", "last 2 versions", "not ie <= 8"],
 	"gitHooks": {
 		"pre-commit": "lint-staged"
 	},
 	"lint-staged": {
-		"*.js": [
-			"vue-cli-service lint",
-			"git add"
-		],
-		"*.vue": [
-			"vue-cli-service lint",
-			"git add"
-		]
+		"*.js": ["vue-cli-service lint", "git add"],
+		"*.vue": ["vue-cli-service lint", "git add"]
 	}
 }
