--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
 		"pre-commit": "lint-staged"
 	},
 	"lint-staged": {
-		"*.js": ["vue-cli-service lint", "git add"],
-		"*.vue": ["vue-cli-service lint", "git add"]
+		"src/**/*.js": ["vue-cli-service lint", "git add"],
+		"src/**/*.vue": ["vue-cli-service lint", "git add"]
 	}
 }
