--- a/package.json
+++ b/package.json
@@ -37,12 +37,22 @@
 		"tailwindcss": "^0.5.1",
 		"vue-template-compiler": "^2.5.13"
 	},
-	"browserslist": ["> 1%", "last 2 versions", "not ie <= 8"],
+	"browserslist": [
+		"> 1%",
+		"last 2 versions",
+		"not ie <= 8"
+	],
 	"gitHooks": {
 		"pre-commit": "lint-staged"
 	},
 	"lint-staged": {
-		"src/**/*.js": ["vue-cli-service lint", "git add"],
-		"src/**/*.vue": ["vue-cli-service lint", "git add"]
+		"src/**/*.js": [
+			"vue-cli-service lint",
+			"git add"
+		],
+		"src/**/*.vue": [
+			"vue-cli-service lint",
+			"git add"
+		]
 	}
 }
