--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	},
 	"dependencies": {
 		"firebase": "^4.12.0",
+		"lodash": "^4.17.10",
 		"register-service-worker": "^1.0.0",
 		"vue": "^2.5.13",
 		"vue-router": "^3.0.1",
