--- a/functions/package.json
+++ b/functions/package.json
@@ -22,8 +22,7 @@
 		"sinon": "^1.17.7"
 	},
 	"engines": {
-		"node": ">=8.0.0 <9",
-		"npm": ">=5.0.0"
+		"node": ">=8.10 <10"
 	},
 	"private": true
 }
