--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"serve": "vue-cli-service serve",
 		"build": "vue-cli-service build",
-		"test": "vue-cli-service test",
+		"test": "vue-cli-service lint",
 		"e2e": "vue-cli-service e2e",
 		"lint": "vue-cli-service lint",
 		"functions": "firebase deploy --only functions",
