--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"lint": "vue-cli-service lint",
 		"functions": "firebase deploy --only functions",
 		"hosting": "firebase deploy --only hosting",
-		"e2e:open": "vue-cli-service e2e:open"
+		"e2e:open": "vue-cli-service e2e:open",
+		"tailwind": "./node_modules/.bin/tailwind build ./src/css/app.scss -c ./tailwind.js -o ./src/css/tailwind-classes.css"
 	},
 	"dependencies": {
 		"firebase": "^4.13",
@@ -23,24 +24,28 @@
 		"vuex": "^3.0.1"
 	},
 	"devDependencies": {
-		"@vue/cli-plugin-babel": "^3.0.0-beta.9",
-		"@vue/cli-plugin-e2e-cypress": "^3.0.0-beta.9",
-		"@vue/cli-plugin-eslint": "^3.0.0-beta.9",
-		"@vue/cli-plugin-pwa": "^3.0.0-beta.9",
-		"@vue/cli-service": "^3.0.0-beta.9",
-		"@vue/eslint-config-prettier": "^3.0.0-beta.9",
+		"@vue/cli-plugin-babel": "^3.0.0-beta.15",
+		"@vue/cli-plugin-e2e-cypress": "^3.0.0-beta.15",
+		"@vue/cli-plugin-eslint": "^3.0.0-beta.15",
+		"@vue/cli-plugin-pwa": "^3.0.0-beta.15",
+		"@vue/cli-service": "^3.0.0-beta.15",
+		"@vue/eslint-config-prettier": "^3.0.0-beta.15",
 		"babel-core": "^7.0.0-0",
 		"firebase-admin": "^5.12.0",
 		"firebase-functions": "^1.0.2",
 		"glob-all": "^3.1.0",
 		"lint-staged": "^6.0.0",
 		"node-sass": "^4.7.2",
-		"purgecss-webpack-plugin": "^0.22.0",
+		"purgecss-webpack-plugin": "^1.1.0",
 		"sass-loader": "^6.0.6",
 		"tailwindcss": "^0.5.3",
 		"vue-template-compiler": "^2.5.16"
 	},
-	"browserslist": ["> 1%", "last 2 versions", "not ie <= 8"],
+	"browserslist": [
+		"> 1%",
+		"last 2 versions",
+		"not ie <= 8"
+	],
 	"engines": {
 		"node": ">=8.10 <10"
 	},
@@ -48,7 +53,13 @@
 		"pre-commit": "lint-staged"
 	},
 	"lint-staged": {
-		"src/**/*.js": ["vue-cli-service lint", "git add"],
-		"src/**/*.vue": ["vue-cli-service lint", "git add"]
+		"src/**/*.js": [
+			"vue-cli-service lint",
+			"git add"
+		],
+		"src/**/*.vue": [
+			"vue-cli-service lint",
+			"git add"
+		]
 	}
 }
