--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,21 @@
 {
-	"name": "The Watcher",
-	"short_name": "Watcher",
-	"description": "A Kingdom Death Monster campaign tool.",
-	"icons": [
-		{
-			"src": "/android-chrome-192x192.png",
-			"sizes": "192x192",
-			"type": "image/png"
-		},
-		{
-			"src": "/android-chrome-512x512.png",
-			"sizes": "512x512",
-			"type": "image/png"
-		}
-	],
-	"start_url": "/",
-	"display": "standalone",
-	"background_color": "#000000",
-	"theme_color": "#000000"
+  "name": "The Watcher",
+  "short_name": "The Watcher",
+  "description": "A Kingdom Death Monster campaign tool.",
+  "icons": [
+    {
+      "src": "/android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/android-chrome-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ],
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#1E1D1E",
+  "theme_color": "#000000"
 }
