--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"functions": "firebase deploy --only functions",
 		"hosting": "firebase deploy --only hosting",
 		"e2e:open": "vue-cli-service e2e:open",
-		"tailwind": "./node_modules/.bin/tailwind build ./src/css/app.scss -c ./tailwind.js -o ./src/css/tailwind-classes.css"
+		"tailwind": "./node_modules/.bin/tailwind build ./src/css/tailwind.css -c ./tailwind.js -o ./src/css/tailwind-classes.css"
 	},
 	"dependencies": {
 		"firebase": "^4.13",
