--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
 		"vuex": "^3.0.1"
 	},
 	"devDependencies": {
-		"@vue/cli-plugin-babel": "^3.0.0-beta.15",
-		"@vue/cli-plugin-e2e-cypress": "^3.0.0-beta.15",
-		"@vue/cli-plugin-eslint": "^3.0.0-beta.15",
-		"@vue/cli-plugin-pwa": "^3.0.0-beta.15",
-		"@vue/cli-service": "^3.0.0-beta.15",
-		"@vue/eslint-config-prettier": "^3.0.0-beta.15",
+		"@vue/cli-plugin-babel": "^3.0.0-rc.3",
+		"@vue/cli-plugin-e2e-cypress": "^3.0.0-rc.3",
+		"@vue/cli-plugin-eslint": "^3.0.0-rc.3",
+		"@vue/cli-plugin-pwa": "^3.0.0-rc.3",
+		"@vue/cli-service": "^3.0.0-rc.3",
+		"@vue/eslint-config-prettier": "^3.0.0-rc.3",
 		"babel-core": "^7.0.0-0",
 		"firebase-admin": "^5.12.0",
 		"firebase-functions": "^1.0.2",
