--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
 		"tailwind": "./node_modules/.bin/tailwind build ./src/css/tailwind.css -c ./tailwind.js -o ./src/css/tailwind-classes.css"
 	},
 	"dependencies": {
+		"babel-loader": "^8.0.6",
+		"babel-preset-es2015": "^6.24.1",
 		"firebase": "^4.13",
 		"lodash": "^4.17.10",
 		"register-service-worker": "^1.2.0",
@@ -21,7 +23,8 @@
 		"vue-router": "^3.0.1",
 		"vue2-transitions": "^0.2.3",
 		"vuefire": "^2.0.0-alpha.10",
-		"vuex": "^3.0.1"
+		"vuex": "^3.0.1",
+		"webpack": "^4.39.1"
 	},
 	"devDependencies": {
 		"@vue/cli-plugin-babel": "^3.0.0-rc.3",
@@ -30,7 +33,7 @@
 		"@vue/cli-plugin-pwa": "^3.0.0-rc.3",
 		"@vue/cli-service": "^3.0.0-rc.3",
 		"@vue/eslint-config-prettier": "^3.0.0-rc.3",
-		"babel-core": "^7.0.0-0",
+		"babel-core": "^6.26.3",
 		"firebase-admin": "^5.12.0",
 		"firebase-functions": "^1.0.2",
 		"glob-all": "^3.1.0",
